# ssl-socks

./: CMakeLists.txt  README.md
config/: README.md  dnsmasq.ipset.conf  dnsmasq.nftset.conf  local.conf  local_socks.conf  local_test.conf  nftables.conf  remote.conf  server.conf  sock_ssl.conf  ssl-socks.local.service  ssl-socks.remote.service  ssl-socks.tproxy.service  sslsocks.setup  tproxy.conf  tproxy.json
doc/: certs.org  modules.html  modules.org  transparent.html  transparent.org
src/: README.md  base_relay.cpp  base_relay.hpp  gfwlist.cpp  gfwlist.hpp  main.cpp  raw_relay.cpp  raw_relay.hpp  raw_tcp.cpp  raw_tcp.hpp  raw_udp.cpp  raw_udp.hpp  relay.hpp  relay_acceptor.cpp  relay_acceptor.hpp  relay_data.hpp  relay_manager.cpp  relay_manager.hpp  relay_server.cpp  relay_server.hpp  sock_ssl.conf  ssl_relay.cpp  ssl_relay.hpp  ssl_tcp.hpp  ssl_udp.cpp  util.c  utils.cpp
test/: nfttest.conf  server_test.conf  test.sh  tproxy.conf
